@@ -1,3 +1,4 @@
+  ***   Warning: new stack size = 20000000 (19.073 Mbytes).
 [x, x + 1, -x^2 - 1, x^2 - 2*x - 1, 7]
 5.1716650998879371140383798588705766078
 [1, [], []]
@@ -26,4 +27,17 @@
 [2]
 5.6285569682787745211960896402558797363
 [2, [2], [[11, 1; 0, 1]]]
-Total time spent: 5
+[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]~
+[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]~
+[0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]~
+[0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]~
+[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0]~
+[0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0]~
+[0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0]~
+[0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0]~
+[0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0]~
+[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0]~
+[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0]~
+[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0]~
+[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1]~
+Total time spent: 864
